[SAAS-495] fix(st-bubble): Fix visible style (#651)

--- a/src/theme/components/_bubble.scss
+++ b/src/theme/components/_bubble.scss
@@ -23,10 +23,6 @@
 
 .st-bubble {
 
-   .content {
-      visibility: visible !important;
-   }
-
    &__content {
       background-color: $action-secondary-07;
       min-width: 130px;
